--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,6 @@
 [build]
-  publish = "dist/client"
   command = "npm run build"
+  publish = "dist"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-[build.environment]
+[context.production.environment]
   NODE_VERSION = "18"
