--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "wrangler": "^4.25.0"
   },
   "scripts": {
-    "build": "tsc -b && vite build",
+    "build": "tsc -p tsconfig.build.json && vite build",
     "cf-typegen": "wrangler types",
     "check": "tsc && vite build && wrangler deploy --dry-run",
     "dev": "vite",
