--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,7 +5,8 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "strict": false
+    "strict": false,
+    "allowImportingTsExtensions": true
   },
   "include": ["src/**/*"],
   "exclude": ["src/worker/**"]
